5.00/parser.output
State 7 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | global_scope function_list
    3        | function_list

    4 global_scope: global_statements
    5             | global_scope global_statements

    6 global_statements: declaration END_COMMA
    7                  | declaration_and_assignment END_COMMA
    8                  | multi_dec END_COMMA
    9                  | error_assai

   10 error_assai: error
   11            | error_assai error

   12 function_list: function
   13              | function_list function

   14 function: function_parameters_declaration statement_list CLOSED_BRACKET
   15         | function_parameters_declaration CLOSED_BRACKET

   16 function_parameters_declaration: function_declaration arguments_declaration OPEN_BRACKET

   17 function_declaration: declaration

   18 arguments_declaration: OPEN_ROUND arguments_declaration_list CLOSED_ROUND
   19                      | OPEN_ROUND CLOSED_ROUND

   20 arguments_declaration_list: declaration
   21                           | arguments_declaration_list COMMA declaration

   22 scope: start_scope statement_list CLOSED_BRACKET
   23      | start_scope CLOSED_BRACKET

   24 start_scope: OPEN_BRACKET

   25 statement_list: statement_scope
   26               | statement_list statement_scope

   27 statement_scope: statement
   28                | scope

   29 statement: expr END_COMMA
   30          | return_statement
   31          | declaration END_COMMA
   32          | assignment END_COMMA
   33          | multi_dec_statement
   34          | multi_asgn END_COMMA
   35          | declaration_and_assignment END_COMMA
   36          | if_else_statement
   37          | while_statement
   38          | END_COMMA

   39 function_call: IDENTIFIER OPEN_ROUND expr_list CLOSED_ROUND
   40              | IDENTIFIER OPEN_ROUND CLOSED_ROUND

   41 if_else_statement: if_statement
   42                  | if_statement else_statement

   43 else_statement: else_declaration OPEN_BRACKET statement_list CLOSED_BRACKET
   44               | else_declaration OPEN_BRACKET CLOSED_BRACKET
   45               | else_declaration statement

   46 if_statement: if_declaration condition OPEN_BRACKET statement_list CLOSED_BRACKET
   47             | if_declaration condition OPEN_BRACKET CLOSED_BRACKET
   48             | if_declaration condition statement

   49 else_declaration: ELSE

   50 if_declaration: IF

   51 while_statement: while_declaration condition OPEN_BRACKET statement_list CLOSED_BRACKET
   52                | while_declaration condition OPEN_BRACKET CLOSED_BRACKET
   53                | while_declaration condition statement

   54 condition: OPEN_ROUND expr CLOSED_ROUND
   55          | OPEN_ROUND assignment CLOSED_ROUND

   56 while_declaration: WHILE

   57 multi_asgn: assignment COMMA assignment
   58           | multi_asgn COMMA assignment

   59 multi_dec_statement: multi_dec END_COMMA

   60 multi_dec: declaration COMMA variable
   61          | declaration_and_assignment COMMA variable
   62          | multi_dec COMMA variable
   63          | multi_dec EQUAL expr
   64          | multi_dec EQUAL array_inizializer

   65 declaration_and_assignment: declaration EQUAL expr
   66                           | declaration EQUAL array_inizializer
   67                           | declaration_and_assignment EQUAL expr

   68 declaration: type variable

   69 assignment: expr EQUAL expr
   70           | assignment EQUAL expr

   71 array_inizializer: OPEN_BRACKET expr_list CLOSED_BRACKET

   72 expr_list: expr
   73          | expr_list COMMA expr

   74 return_statement: RETURN expr END_COMMA

   75 expr: comparison
   76     | NUMBER
   77     | PLUS NUMBER
   78     | MINUS NUMBER
   79     | variable
   80     | STRING
   81     | CH
   82     | function_call
   83     | operation
   84     | pre_incdec
   85     | post_incdec
   86     | AMP variable

   87 pre_incdec: INC variable
   88           | DEC variable

   89 post_incdec: variable INC
   90            | variable DEC

   91 operation: expr PLUS expr
   92          | expr MINUS expr
   93          | expr STAR expr
   94          | expr DIVIDE expr
   95          | expr MODULO expr
   96          | OPEN_ROUND expr CLOSED_ROUND

   97 comparison: expr AND expr
   98           | expr OR expr
   99           | expr GT expr
  100           | expr LT expr
  101           | expr ET expr
  102           | expr DF expr

  103 type: INT
  104     | CHAR

  105 variable: IDENTIFIER
  106         | IDENTIFIER OPEN_SQUARED expr CLOSED_SQUARED
  107         | IDENTIFIER OPEN_SQUARED CLOSED_SQUARED


Terminals, with rules where they appear

$end (0) 0
error (256) 10 11
INT (258) 103
CHAR (259) 104
IDENTIFIER (260) 39 40 105 106 107
NUMBER (261) 76 77 78
EQUAL (262) 63 64 65 66 67 69 70
END_COMMA (263) 6 7 8 29 31 32 34 35 38 59 74
OPEN_ROUND (264) 18 19 39 40 54 55 96
CLOSED_ROUND (265) 18 19 39 40 54 55 96
OPEN_SQUARED (266) 106 107
CLOSED_SQUARED (267) 106 107
OPEN_BRACKET (268) 16 24 43 44 46 47 51 52 71
CLOSED_BRACKET (269) 14 15 22 23 43 44 46 47 51 52 71
RETURN (270) 74
STRING (271) 80
CH (272) 81
IF (273) 50
ELSE (274) 49
WHILE (275) 56
INC (276) 87 89
DEC (277) 88 90
AMP (278) 86
COMMA (279) 21 57 58 60 61 62 73
DF (280) 102
ET (281) 101
LT (282) 100
GT (283) 99
OR (284) 98
AND (285) 97
MINUS (286) 78 92
PLUS (287) 77 91
MODULO (288) 95
DIVIDE (289) 94
STAR (290) 93


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1 2 3, on right: 0
global_scope (38)
    on left: 4 5, on right: 2 5
global_statements (39)
    on left: 6 7 8 9, on right: 4 5
error_assai (40)
    on left: 10 11, on right: 9 11
function_list (41)
    on left: 12 13, on right: 2 3 13
function (42)
    on left: 14 15, on right: 12 13
function_parameters_declaration (43)
    on left: 16, on right: 14 15
function_declaration (44)
    on left: 17, on right: 16
arguments_declaration (45)
    on left: 18 19, on right: 16
arguments_declaration_list (46)
    on left: 20 21, on right: 18 21
scope (47)
    on left: 22 23, on right: 28
start_scope (48)
    on left: 24, on right: 22 23
statement_list (49)
    on left: 25 26, on right: 14 22 26 43 46 51
statement_scope (50)
    on left: 27 28, on right: 25 26
statement (51)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 27 45 48 53
function_call (52)
    on left: 39 40, on right: 82
if_else_statement (53)
    on left: 41 42, on right: 36
else_statement (54)
    on left: 43 44 45, on right: 42
if_statement (55)
    on left: 46 47 48, on right: 41 42
else_declaration (56)
    on left: 49, on right: 43 44 45
if_declaration (57)
    on left: 50, on right: 46 47 48
while_statement (58)
    on left: 51 52 53, on right: 37
condition (59)
    on left: 54 55, on right: 46 47 48 51 52 53
while_declaration (60)
    on left: 56, on right: 51 52 53
multi_asgn (61)
    on left: 57 58, on right: 34 58
multi_dec_statement (62)
    on left: 59, on right: 33
multi_dec (63)
    on left: 60 61 62 63 64, on right: 8 59 62 63 64
declaration_and_assignment (64)
    on left: 65 66 67, on right: 7 35 61 67
declaration (65)
    on left: 68, on right: 6 17 20 21 31 60 65 66
assignment (66)
    on left: 69 70, on right: 32 55 57 58 70
array_inizializer (67)
    on left: 71, on right: 64 66
expr_list (68)
    on left: 72 73, on right: 39 71 73
return_statement (69)
    on left: 74, on right: 30
expr (70)
    on left: 75 76 77 78 79 80 81 82 83 84 85 86, on right: 29 54 63
    65 67 69 70 72 73 74 91 92 93 94 95 96 97 98 99 100 101 102 106
pre_incdec (71)
    on left: 87 88, on right: 84
post_incdec (72)
    on left: 89 90, on right: 85
operation (73)
    on left: 91 92 93 94 95 96, on right: 83
comparison (74)
    on left: 97 98 99 100 101 102, on right: 75
type (75)
    on left: 103 104, on right: 68
variable (76)
    on left: 105 106 107, on right: 60 61 62 68 79 86 87 88 89 90


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    INT    shift, and go to state 2
    CHAR   shift, and go to state 3

    $end  reduce using rule 1 (program)

    program                          go to state 4
    global_scope                     go to state 5
    global_statements                go to state 6
    error_assai                      go to state 7
    function_list                    go to state 8
    function                         go to state 9
    function_parameters_declaration  go to state 10
    function_declaration             go to state 11
    multi_dec                        go to state 12
    declaration_and_assignment       go to state 13
    declaration                      go to state 14
    type                             go to state 15


state 1

   10 error_assai: error .

    $default  reduce using rule 10 (error_assai)


state 2

  103 type: INT .

    $default  reduce using rule 103 (type)


state 3

  104 type: CHAR .

    $default  reduce using rule 104 (type)


state 4

    0 $accept: program . $end

    $end  shift, and go to state 16


state 5

    2 program: global_scope . function_list
    5 global_scope: global_scope . global_statements

    error  shift, and go to state 1
    INT    shift, and go to state 2
    CHAR   shift, and go to state 3

    global_statements                go to state 17
    error_assai                      go to state 7
    function_list                    go to state 18
    function                         go to state 9
    function_parameters_declaration  go to state 10
    function_declaration             go to state 11
    multi_dec                        go to state 12
    declaration_and_assignment       go to state 13
    declaration                      go to state 14
    type                             go to state 15


state 6

    4 global_scope: global_statements .

    $default  reduce using rule 4 (global_scope)


state 7

    9 global_statements: error_assai .
   11 error_assai: error_assai . error

    error  shift, and go to state 19

    error  [reduce using rule 9 (global_statements)]
    INT    reduce using rule 9 (global_statements)
    CHAR   reduce using rule 9 (global_statements)


state 8

    3 program: function_list .
   13 function_list: function_list . function

    INT   shift, and go to state 2
    CHAR  shift, and go to state 3

    $default  reduce using rule 3 (program)

    function                         go to state 20
    function_parameters_declaration  go to state 10
    function_declaration             go to state 11
    declaration                      go to state 21
    type                             go to state 15


state 9

   12 function_list: function .

    $default  reduce using rule 12 (function_list)


state 10

   14 function: function_parameters_declaration . statement_list CLOSED_BRACKET
   15         | function_parameters_declaration . CLOSED_BRACKET

    INT             shift, and go to state 2
    CHAR            shift, and go to state 3
    IDENTIFIER      shift, and go to state 22
    NUMBER          shift, and go to state 23
    END_COMMA       shift, and go to state 24
    OPEN_ROUND      shift, and go to state 25
    OPEN_BRACKET    shift, and go to state 26
    CLOSED_BRACKET  shift, and go to state 27
    RETURN          shift, and go to state 28
    STRING          shift, and go to state 29
    CH              shift, and go to state 30
    IF              shift, and go to state 31
    WHILE           shift, and go to state 32
    INC             shift, and go to state 33
    DEC             shift, and go to state 34
    AMP             shift, and go to state 35
    MINUS           shift, and go to state 36
    PLUS            shift, and go to state 37

    scope                       go to state 38
    start_scope                 go to state 39
    statement_list              go to state 40
    statement_scope             go to state 41
    statement                   go to state 42
    function_call               go to state 43
    if_else_statement           go to state 44
    if_statement                go to state 45
    if_declaration              go to state 46
    while_statement             go to state 47
    while_declaration           go to state 48
    multi_asgn                  go to state 49
    multi_dec_statement         go to state 50
    multi_dec                   go to state 51
    declaration_and_assignment  go to state 52
    declaration                 go to state 53
    assignment                  go to state 54
    return_statement            go to state 55
    expr                        go to state 56
    pre_incdec                  go to state 57
    post_incdec                 go to state 58
    operation                   go to state 59
    comparison                  go to state 60
    type                        go to state 15
    variable                    go to state 61


state 11

   16 function_parameters_declaration: function_declaration . arguments_declaration OPEN_BRACKET

    OPEN_ROUND  shift, and go to state 62

    arguments_declaration  go to state 63


state 12

    8 global_statements: multi_dec . END_COMMA
   62 multi_dec: multi_dec . COMMA variable
   63          | multi_dec . EQUAL expr
   64          | multi_dec . EQUAL array_inizializer

    EQUAL      shift, and go to state 64
    END_COMMA  shift, and go to state 65
    COMMA      shift, and go to state 66


state 13

    7 global_statements: declaration_and_assignment . END_COMMA
   61 multi_dec: declaration_and_assignment . COMMA variable
   67 declaration_and_assignment: declaration_and_assignment . EQUAL expr

    EQUAL      shift, and go to state 67
    END_COMMA  shift, and go to state 68
    COMMA      shift, and go to state 69


state 14

    6 global_statements: declaration . END_COMMA
   17 function_declaration: declaration .
   60 multi_dec: declaration . COMMA variable
   65 declaration_and_assignment: declaration . EQUAL expr
   66                           | declaration . EQUAL array_inizializer

    EQUAL      shift, and go to state 70
    END_COMMA  shift, and go to state 71
    COMMA      shift, and go to state 72

    $default  reduce using rule 17 (function_declaration)


state 15

   68 declaration: type . variable

    IDENTIFIER  shift, and go to state 73

    variable  go to state 74


state 16

    0 $accept: program $end .

    $default  accept


state 17

    5 global_scope: global_scope global_statements .

    $default  reduce using rule 5 (global_scope)


state 18

    2 program: global_scope function_list .
   13 function_list: function_list . function

    INT   shift, and go to state 2
    CHAR  shift, and go to state 3

    $default  reduce using rule 2 (program)

    function                         go to state 20
    function_parameters_declaration  go to state 10
    function_declaration             go to state 11
    declaration                      go to state 21
    type                             go to state 15


state 19

   11 error_assai: error_assai error .

    $default  reduce using rule 11 (error_assai)


state 20

   13 function_list: function_list function .

    $default  reduce using rule 13 (function_list)


state 21

   17 function_declaration: declaration .

    $default  reduce using rule 17 (function_declaration)


state 22

   39 function_call: IDENTIFIER . OPEN_ROUND expr_list CLOSED_ROUND
   40              | IDENTIFIER . OPEN_ROUND CLOSED_ROUND
  105 variable: IDENTIFIER .
  106         | IDENTIFIER . OPEN_SQUARED expr CLOSED_SQUARED
  107         | IDENTIFIER . OPEN_SQUARED CLOSED_SQUARED

    OPEN_ROUND    shift, and go to state 75
    OPEN_SQUARED  shift, and go to state 76

    $default  reduce using rule 105 (variable)


state 23

   76 expr: NUMBER .

    $default  reduce using rule 76 (expr)


state 24

   38 statement: END_COMMA .

    $default  reduce using rule 38 (statement)


state 25

   96 operation: OPEN_ROUND . expr CLOSED_ROUND

    IDENTIFIER  shift, and go to state 22
    NUMBER      shift, and go to state 23
    OPEN_ROUND  shift, and go to state 25
    STRING      shift, and go to state 29
    CH          shift, and go to state 30
    INC         shift, and go to state 33
    DEC         shift, and go to state 34
    AMP         shift, and go to state 35
    MINUS       shift, and go to state 36
    PLUS        shift, and go to state 37

    function_call  go to state 43
    expr           go to state 77
    pre_incdec     go to state 57
    post_incdec    go to state 58
    operation      go to state 59
    comparison     go to state 60
    variable       go to state 61


state 26

   24 start_scope: OPEN_BRACKET .

    $default  reduce using rule 24 (start_scope)


state 27

   15 function: function_parameters_declaration CLOSED_BRACKET .

    $default  reduce using rule 15 (function)


state 28

   74 return_statement: RETURN . expr END_COMMA

    IDENTIFIER  shift, and go to state 22
    NUMBER      shift, and go to state 23
    OPEN_ROUND  shift, and go to state 25
    STRING      shift, and go to state 29
    CH          shift, and go to state 30
    INC         shift, and go to state 33
    DEC         shift, and go to state 34
    AMP         shift, and go to state 35
    MINUS       shift, and go to state 36
    PLUS        shift, and go to state 37

    function_call  go to state 43
    expr           go to state 78
    pre_incdec     go to state 57
    post_incdec    go to state 58
    operation      go to state 59
    comparison     go to state 60
    variable       go to state 61


state 29

   80 expr: STRING .

    $default  reduce using rule 80 (expr)


state 30

   81 expr: CH .

    $default  reduce using rule 81 (expr)


state 31

   50 if_declaration: IF .

    $default  reduce using rule 50 (if_declaration)


state 32

   56 while_declaration: WHILE .

    $default  reduce using rule 56 (while_declaration)


state 33

   87 pre_incdec: INC . variable

    IDENTIFIER  shift, and go to state 73

    variable  go to state 79


state 34

   88 pre_incdec: DEC . variable

    IDENTIFIER  shift, and go to state 73

    variable  go to state 80


state 35

   86 expr: AMP . variable

    IDENTIFIER  shift, and go to state 73

    variable  go to state 81


state 36

   78 expr: MINUS . NUMBER

    NUMBER  shift, and go to state 82


state 37

   77 expr: PLUS . NUMBER

    NUMBER  shift, and go to state 83


state 38

   28 statement_scope: scope .

    $default  reduce using rule 28 (statement_scope)


state 39

   22 scope: start_scope . statement_list CLOSED_BRACKET
   23      | start_scope . CLOSED_BRACKET

    INT             shift, and go to state 2
    CHAR            shift, and go to state 3
    IDENTIFIER      shift, and go to state 22
    NUMBER          shift, and go to state 23
    END_COMMA       shift, and go to state 24
    OPEN_ROUND      shift, and go to state 25
    OPEN_BRACKET    shift, and go to state 26
    CLOSED_BRACKET  shift, and go to state 84
    RETURN          shift, and go to state 28
    STRING          shift, and go to state 29
    CH              shift, and go to state 30
    IF              shift, and go to state 31
    WHILE           shift, and go to state 32
    INC             shift, and go to state 33
    DEC             shift, and go to state 34
    AMP             shift, and go to state 35
    MINUS           shift, and go to state 36
    PLUS            shift, and go to state 37

    scope                       go to state 38
    start_scope                 go to state 39
    statement_list              go to state 85
    statement_scope             go to state 41
    statement                   go to state 42
    function_call               go to state 43
    if_else_statement           go to state 44
    if_statement                go to state 45
    if_declaration              go to state 46
    while_statement             go to state 47
    while_declaration           go to state 48
    multi_asgn                  go to state 49
    multi_dec_statement         go to state 50
    multi_dec                   go to state 51
    declaration_and_assignment  go to state 52
    declaration                 go to state 53
    assignment                  go to state 54
    return_statement            go to state 55
    expr                        go to state 56
    pre_incdec                  go to state 57
    post_incdec                 go to state 58
    operation                   go to state 59
    comparison                  go to state 60
    type                        go to state 15
    variable                    go to state 61


state 40

   14 function: function_parameters_declaration statement_list . CLOSED_BRACKET
   26 statement_list: statement_list . statement_scope

    INT             shift, and go to state 2
    CHAR            shift, and go to state 3
    IDENTIFIER      shift, and go to state 22
    NUMBER          shift, and go to state 23
    END_COMMA       shift, and go to state 24
    OPEN_ROUND      shift, and go to state 25
    OPEN_BRACKET    shift, and go to state 26
    CLOSED_BRACKET  shift, and go to state 86
    RETURN          shift, and go to state 28
    STRING          shift, and go to state 29
    CH              shift, and go to state 30
    IF              shift, and go to state 31
    WHILE           shift, and go to state 32
    INC             shift, and go to state 33
    DEC             shift, and go to state 34
    AMP             shift, and go to state 35
    MINUS           shift, and go to state 36
    PLUS            shift, and go to state 37

    scope                       go to state 38
    start_scope                 go to state 39
    statement_scope             go to state 87
    statement                   go to state 42
    function_call               go to state 43
    if_else_statement           go to state 44
    if_statement                go to state 45
    if_declaration              go to state 46
    while_statement             go to state 47
    while_declaration           go to state 48
    multi_asgn                  go to state 49
    multi_dec_statement         go to state 50
    multi_dec                   go to state 51
    declaration_and_assignment  go to state 52
    declaration                 go to state 53
    assignment                  go to state 54
    return_statement            go to state 55
    expr                        go to state 56
    pre_incdec                  go to state 57
    post_incdec                 go to state 58
    operation                   go to state 59
    comparison                  go to state 60
    type                        go to state 15
    variable                    go to state 61


state 41

   25 statement_list: statement_scope .

    $default  reduce using rule 25 (statement_list)


state 42

   27 statement_scope: statement .

    $default  reduce using rule 27 (statement_scope)


state 43

   82 expr: function_call .

    $default  reduce using rule 82 (expr)


state 44

   36 statement: if_else_statement .

    $default  reduce using rule 36 (statement)


state 45

   41 if_else_statement: if_statement .
   42                  | if_statement . else_statement

    ELSE  shift, and go to state 88

    ELSE      [reduce using rule 41 (if_else_statement)]
    $default  reduce using rule 41 (if_else_statement)

    else_statement    go to state 89
    else_declaration  go to state 90


state 46

   46 if_statement: if_declaration . condition OPEN_BRACKET statement_list CLOSED_BRACKET
   47             | if_declaration . condition OPEN_BRACKET CLOSED_BRACKET
   48             | if_declaration . condition statement

    OPEN_ROUND  shift, and go to state 91

    condition  go to state 92


state 47

   37 statement: while_statement .

    $default  reduce using rule 37 (statement)


state 48

   51 while_statement: while_declaration . condition OPEN_BRACKET statement_list CLOSED_BRACKET
   52                | while_declaration . condition OPEN_BRACKET CLOSED_BRACKET
   53                | while_declaration . condition statement

    OPEN_ROUND  shift, and go to state 91

    condition  go to state 93


state 49

   34 statement: multi_asgn . END_COMMA
   58 multi_asgn: multi_asgn . COMMA assignment

    END_COMMA  shift, and go to state 94
    COMMA      shift, and go to state 95


state 50

   33 statement: multi_dec_statement .

    $default  reduce using rule 33 (statement)


state 51

   59 multi_dec_statement: multi_dec . END_COMMA
   62 multi_dec: multi_dec . COMMA variable
   63          | multi_dec . EQUAL expr
   64          | multi_dec . EQUAL array_inizializer

    EQUAL      shift, and go to state 64
    END_COMMA  shift, and go to state 96
    COMMA      shift, and go to state 66


state 52

   35 statement: declaration_and_assignment . END_COMMA
   61 multi_dec: declaration_and_assignment . COMMA variable
   67 declaration_and_assignment: declaration_and_assignment . EQUAL expr

    EQUAL      shift, and go to state 67
    END_COMMA  shift, and go to state 97
    COMMA      shift, and go to state 69


state 53

   31 statement: declaration . END_COMMA
   60 multi_dec: declaration . COMMA variable
   65 declaration_and_assignment: declaration . EQUAL expr
   66                           | declaration . EQUAL array_inizializer

    EQUAL      shift, and go to state 70
    END_COMMA  shift, and go to state 98
    COMMA      shift, and go to state 72


state 54

   32 statement: assignment . END_COMMA
   57 multi_asgn: assignment . COMMA assignment
   70 assignment: assignment . EQUAL expr

    EQUAL      shift, and go to state 99
    END_COMMA  shift, and go to state 100
    COMMA      shift, and go to state 101


state 55

   30 statement: return_statement .

    $default  reduce using rule 30 (statement)


state 56

   29 statement: expr . END_COMMA
   69 assignment: expr . EQUAL expr
   91 operation: expr . PLUS expr
   92          | expr . MINUS expr
   93          | expr . STAR expr
   94          | expr . DIVIDE expr
   95          | expr . MODULO expr
   97 comparison: expr . AND expr
   98           | expr . OR expr
   99           | expr . GT expr
  100           | expr . LT expr
  101           | expr . ET expr
  102           | expr . DF expr

    EQUAL      shift, and go to state 102
    END_COMMA  shift, and go to state 103
    DF         shift, and go to state 104
    ET         shift, and go to state 105
    LT         shift, and go to state 106
    GT         shift, and go to state 107
    OR         shift, and go to state 108
    AND        shift, and go to state 109
    MINUS      shift, and go to state 110
    PLUS       shift, and go to state 111
    MODULO     shift, and go to state 112
    DIVIDE     shift, and go to state 113
    STAR       shift, and go to state 114


state 57

   84 expr: pre_incdec .

    $default  reduce using rule 84 (expr)


state 58

   85 expr: post_incdec .

    $default  reduce using rule 85 (expr)


state 59

   83 expr: operation .

    $default  reduce using rule 83 (expr)


state 60

   75 expr: comparison .

    $default  reduce using rule 75 (expr)


state 61

   79 expr: variable .
   89 post_incdec: variable . INC
   90            | variable . DEC

    INC  shift, and go to state 115
    DEC  shift, and go to state 116

    $default  reduce using rule 79 (expr)


state 62

   18 arguments_declaration: OPEN_ROUND . arguments_declaration_list CLOSED_ROUND
   19                      | OPEN_ROUND . CLOSED_ROUND

    INT           shift, and go to state 2
    CHAR          shift, and go to state 3
    CLOSED_ROUND  shift, and go to state 117

    arguments_declaration_list  go to state 118
    declaration                 go to state 119
    type                        go to state 15


state 63

   16 function_parameters_declaration: function_declaration arguments_declaration . OPEN_BRACKET

    OPEN_BRACKET  shift, and go to state 120


state 64

   63 multi_dec: multi_dec EQUAL . expr
   64          | multi_dec EQUAL . array_inizializer

    IDENTIFIER    shift, and go to state 22
    NUMBER        shift, and go to state 23
    OPEN_ROUND    shift, and go to state 25
    OPEN_BRACKET  shift, and go to state 121
    STRING        shift, and go to state 29
    CH            shift, and go to state 30
    INC           shift, and go to state 33
    DEC           shift, and go to state 34
    AMP           shift, and go to state 35
    MINUS         shift, and go to state 36
    PLUS          shift, and go to state 37

    function_call      go to state 43
    array_inizializer  go to state 122
    expr               go to state 123
    pre_incdec         go to state 57
    post_incdec        go to state 58
    operation          go to state 59
    comparison         go to state 60
    variable           go to state 61


state 65

    8 global_statements: multi_dec END_COMMA .

    $default  reduce using rule 8 (global_statements)


state 66

   62 multi_dec: multi_dec COMMA . variable

    IDENTIFIER  shift, and go to state 73

    variable  go to state 124


state 67

   67 declaration_and_assignment: declaration_and_assignment EQUAL . expr

    IDENTIFIER  shift, and go to state 22
    NUMBER      shift, and go to state 23
    OPEN_ROUND  shift, and go to state 25
    STRING      shift, and go to state 29
    CH          shift, and go to state 30
    INC         shift, and go to state 33
    DEC         shift, and go to state 34
    AMP         shift, and go to state 35
    MINUS       shift, and go to state 36
    PLUS        shift, and go to state 37

    function_call  go to state 43
    expr           go to state 125
    pre_incdec     go to state 57
    post_incdec    go to state 58
    operation      go to state 59
    comparison     go to state 60
    variable       go to state 61


state 68

    7 global_statements: declaration_and_assignment END_COMMA .

    $default  reduce using rule 7 (global_statements)


state 69

   61 multi_dec: declaration_and_assignment COMMA . variable

    IDENTIFIER  shift, and go to state 73

    variable  go to state 126


state 70

   65 declaration_and_assignment: declaration EQUAL . expr
   66                           | declaration EQUAL . array_inizializer

    IDENTIFIER    shift, and go to state 22
    NUMBER        shift, and go to state 23
    OPEN_ROUND    shift, and go to state 25
    OPEN_BRACKET  shift, and go to state 121
    STRING        shift, and go to state 29
    CH            shift, and go to state 30
    INC           shift, and go to state 33
    DEC           shift, and go to state 34
    AMP           shift, and go to state 35
    MINUS         shift, and go to state 36
    PLUS          shift, and go to state 37

    function_call      go to state 43
    array_inizializer  go to state 127
    expr               go to state 128
    pre_incdec         go to state 57
    post_incdec        go to state 58
    operation          go to state 59
    comparison         go to state 60
    variable           go to state 61


state 71

    6 global_statements: declaration END_COMMA .

    $default  reduce using rule 6 (global_statements)


state 72

   60 multi_dec: declaration COMMA . variable

    IDENTIFIER  shift, and go to state 73

    variable  go to state 129


state 73

  105 variable: IDENTIFIER .
  106         | IDENTIFIER . OPEN_SQUARED expr CLOSED_SQUARED
  107         | IDENTIFIER . OPEN_SQUARED CLOSED_SQUARED

    OPEN_SQUARED  shift, and go to state 76

    $default  reduce using rule 105 (variable)


state 74

   68 declaration: type variable .

    $default  reduce using rule 68 (declaration)


state 75

   39 function_call: IDENTIFIER OPEN_ROUND . expr_list CLOSED_ROUND
   40              | IDENTIFIER OPEN_ROUND . CLOSED_ROUND

    IDENTIFIER    shift, and go to state 22
    NUMBER        shift, and go to state 23
    OPEN_ROUND    shift, and go to state 25
    CLOSED_ROUND  shift, and go to state 130
    STRING        shift, and go to state 29
    CH            shift, and go to state 30
    INC           shift, and go to state 33
    DEC           shift, and go to state 34
    AMP           shift, and go to state 35
    MINUS         shift, and go to state 36
    PLUS          shift, and go to state 37

    function_call  go to state 43
    expr_list      go to state 131
    expr           go to state 132
    pre_incdec     go to state 57
    post_incdec    go to state 58
    operation      go to state 59
    comparison     go to state 60
    variable       go to state 61


state 76

  106 variable: IDENTIFIER OPEN_SQUARED . expr CLOSED_SQUARED
  107         | IDENTIFIER OPEN_SQUARED . CLOSED_SQUARED

    IDENTIFIER      shift, and go to state 22
    NUMBER          shift, and go to state 23
    OPEN_ROUND      shift, and go to state 25
    CLOSED_SQUARED  shift, and go to state 133
    STRING          shift, and go to state 29
    CH              shift, and go to state 30
    INC             shift, and go to state 33
    DEC             shift, and go to state 34
    AMP             shift, and go to state 35
    MINUS           shift, and go to state 36
    PLUS            shift, and go to state 37

    function_call  go to state 43
    expr           go to state 134
    pre_incdec     go to state 57
    post_incdec    go to state 58
    operation      go to state 59
    comparison     go to state 60
    variable       go to state 61


state 77

   91 operation: expr . PLUS expr
   92          | expr . MINUS expr
   93          | expr . STAR expr
   94          | expr . DIVIDE expr
   95          | expr . MODULO expr
   96          | OPEN_ROUND expr . CLOSED_ROUND
   97 comparison: expr . AND expr
   98           | expr . OR expr
   99           | expr . GT expr
  100           | expr . LT expr
  101           | expr . ET expr
  102           | expr . DF expr

    CLOSED_ROUND  shift, and go to state 135
    DF            shift, and go to state 104
    ET            shift, and go to state 105
    LT            shift, and go to state 106
    GT            shift, and go to state 107
    OR            shift, and go to state 108
    AND           shift, and go to state 109
    MINUS         shift, and go to state 110
    PLUS          shift, and go to state 111
    MODULO        shift, and go to state 112
    DIVIDE        shift, and go to state 113
    STAR          shift, and go to state 114


state 78

   74 return_statement: RETURN expr . END_COMMA
   91 operation: expr . PLUS expr
   92          | expr . MINUS expr
   93          | expr . STAR expr
   94          | expr . DIVIDE expr
   95          | expr . MODULO expr
   97 comparison: expr . AND expr
   98           | expr . OR expr
   99           | expr . GT expr
  100           | expr . LT expr
  101           | expr . ET expr
  102           | expr . DF expr

    END_COMMA  shift, and go to state 136
    DF         shift, and go to state 104
    ET         shift, and go to state 105
    LT         shift, and go to state 106
    GT         shift, and go to state 107
    OR         shift, and go to state 108
    AND        shift, and go to state 109
    MINUS      shift, and go to state 110
    PLUS       shift, and go to state 111
    MODULO     shift, and go to state 112
    DIVIDE     shift, and go to state 113
    STAR       shift, and go to state 114


state 79

   87 pre_incdec: INC variable .

    $default  reduce using rule 87 (pre_incdec)


state 80

   88 pre_incdec: DEC variable .

    $default  reduce using rule 88 (pre_incdec)


state 81

   86 expr: AMP variable .

    $default  reduce using rule 86 (expr)


state 82

   78 expr: MINUS NUMBER .

    $default  reduce using rule 78 (expr)


state 83

   77 expr: PLUS NUMBER .

    $default  reduce using rule 77 (expr)


state 84

   23 scope: start_scope CLOSED_BRACKET .

    $default  reduce using rule 23 (scope)


state 85

   22 scope: start_scope statement_list . CLOSED_BRACKET
   26 statement_list: statement_list . statement_scope

    INT             shift, and go to state 2
    CHAR            shift, and go to state 3
    IDENTIFIER      shift, and go to state 22
    NUMBER          shift, and go to state 23
    END_COMMA       shift, and go to state 24
    OPEN_ROUND      shift, and go to state 25
    OPEN_BRACKET    shift, and go to state 26
    CLOSED_BRACKET  shift, and go to state 137
    RETURN          shift, and go to state 28
    STRING          shift, and go to state 29
    CH              shift, and go to state 30
    IF              shift, and go to state 31
    WHILE           shift, and go to state 32
    INC             shift, and go to state 33
    DEC             shift, and go to state 34
    AMP             shift, and go to state 35
    MINUS           shift, and go to state 36
    PLUS            shift, and go to state 37

    scope                       go to state 38
    start_scope                 go to state 39
    statement_scope             go to state 87
    statement                   go to state 42
    function_call               go to state 43
    if_else_statement           go to state 44
    if_statement                go to state 45
    if_declaration              go to state 46
    while_statement             go to state 47
    while_declaration           go to state 48
    multi_asgn                  go to state 49
    multi_dec_statement         go to state 50
    multi_dec                   go to state 51
    declaration_and_assignment  go to state 52
    declaration                 go to state 53
    assignment                  go to state 54
    return_statement            go to state 55
    expr                        go to state 56
    pre_incdec                  go to state 57
    post_incdec                 go to state 58
    operation                   go to state 59
    comparison                  go to state 60
    type                        go to state 15
    variable                    go to state 61


state 86

   14 function: function_parameters_declaration statement_list CLOSED_BRACKET .

    $default  reduce using rule 14 (function)


state 87

   26 statement_list: statement_list statement_scope .

    $default  reduce using rule 26 (statement_list)


state 88

   49 else_declaration: ELSE .

    $default  reduce using rule 49 (else_declaration)


state 89

   42 if_else_statement: if_statement else_statement .

    $default  reduce using rule 42 (if_else_statement)


state 90

   43 else_statement: else_declaration . OPEN_BRACKET statement_list CLOSED_BRACKET
   44               | else_declaration . OPEN_BRACKET CLOSED_BRACKET
   45               | else_declaration . statement
